demo feedback fix for mobile image to appear on the top on mobile and ipad resolutions

--- a/ui.frontend/src/main/webpack/etisalat/styles/mediacta_modal-video.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/mediacta_modal-video.scss
@@ -1,3 +1,13 @@
+
+//class for image on the top for mobile and ipad
+@include respond-to-max($tablet){
+	.media-cta-flipped .cmp-container{
+	display:flex;
+	flex-direction:column-reverse;
+	}
+	}
+
+
 .media-cta-wrapper {
 	position: relative;
 	border-radius: 4px;
